Style title with Roboto Slab

--- a/main.css
+++ b/main.css
@@ -24,3 +24,12 @@ paper-menu {
 paper-toolbar {
   --paper-toolbar-background: red;
 }
+
+#title {
+  font-family: 'Roboto Slab', sans-serif;
+  font-size: 28px;
+}
+
+#menu-title {
+  font-family: 'Roboto Slab', sans-serif;
+}
