Use page.js instead of <more-routing>

--- a/main.css
+++ b/main.css
@@ -33,3 +33,8 @@ paper-toolbar {
 #menu-title {
   font-family: 'Roboto Slab', sans-serif;
 }
+
+paper-menu paper-item a {
+  text-decoration: none;
+  color: black;
+}
